Add type hints & "Define Text Generation" section

--- a/exercise-3-name/solution/text-generation.ipynb
+++ b/exercise-3-name/solution/text-generation.ipynb
@@ -6,6 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from __future__ import annotations\n",
+    "from collections.abc import Sequence\n",
+    "\n",
+    "import time\n",
+    "import math\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
@@ -52,7 +57,7 @@
    "outputs": [],
    "source": [
     "# Reduced data to make it manageable for smaller systems\n",
-    "DATA_FILE = '../data/shakespeare_small.txt'"
+    "DATA_FILE: str = '../data/shakespeare_small.txt'"
    ]
   },
   {
@@ -190,7 +195,7 @@
    "outputs": [],
    "source": [
     "class ShakespeareDataset(Dataset):\n",
-    "    def __init__(self, encoded_text, sequence_length):\n",
+    "    def __init__(self, encoded_text: Sequence, sequence_length: int):\n",
     "        self.encoded_text = encoded_text\n",
     "        self.sequence_length = sequence_length\n",
     "\n",
@@ -241,7 +246,7 @@
    "outputs": [],
    "source": [
     "class ShakespeareModel(nn.Module):\n",
-    "    def __init__(self, n_tokens, embedding_dim, hidden_dim):\n",
+    "    def __init__(self, n_tokens: int, embedding_dim: int, hidden_dim: int):\n",
     "        super(ShakespeareModel, self).__init__()\n",
     "        self.embedding = nn.Embedding(n_tokens, embedding_dim)\n",
     "        self.rnn = nn.GRU(embedding_dim, hidden_dim, batch_first=True)\n",
@@ -273,22 +278,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Train Model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import time, math\n",
-    "\n",
-    "def time_since(since):\n",
-    "    s = time.time() - since\n",
-    "    m = math.floor(s / 60)\n",
-    "    s -= m * 60\n",
-    "    return '%dm %ds' % (m, s)"
+    "## Define Text Genaration"
    ]
   },
   {
@@ -299,10 +289,10 @@
    "source": [
     "def generate_text(\n",
     "    model,\n",
-    "    input_str,\n",
-    "    num_chars=100,\n",
-    "    temperature=1.0,\n",
-    "):\n",
+    "    input_str: str,\n",
+    "    num_chars: int = 100,\n",
+    "    temperature: float = 1.0,\n",
+    ") -> str:\n",
     "    model.eval()\n",
     "    generated_text = input_str.lower()\n",
     "    input_tensor = (\n",
@@ -331,6 +321,26 @@
     "            )\n",
     "            \n",
     "    return generated_text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def time_since(since: float) -> str:\n",
+    "    s = time.time() - since\n",
+    "    m = math.floor(s / 60)\n",
+    "    s -= m * 60\n",
+    "    return '%dm %ds' % (m, s)"
    ]
   },
   {
@@ -533,7 +543,7 @@
    "outputs": [],
    "source": [
     "class ShakespeareDataset(Dataset):\n",
-    "    def __init__(self, encoded_text, sequence_length):\n",
+    "    def __init__(self, encoded_text: Sequence, sequence_length: int):\n",
     "        self.encoded_text = encoded_text\n",
     "        self.sequence_length = sequence_length\n",
     "\n",
@@ -545,7 +555,7 @@
     "            self.encoded_text[index: (index+self.sequence_length)],\n",
     "            dtype=torch.long,\n",
     "        )\n",
-    "        # Target is shifted by one character\n",
+    "        # Target is shifted by one token\n",
     "        y = torch.tensor(\n",
     "            self.encoded_text[(index+1): (index+self.sequence_length+1)],\n",
     "            dtype=torch.long,\n",
@@ -584,7 +594,7 @@
    "outputs": [],
    "source": [
     "class ShakespeareModel(nn.Module):\n",
-    "    def __init__(self, n_tokens, embedding_dim, hidden_dim):\n",
+    "    def __init__(self, n_tokens: int, embedding_dim: int, hidden_dim: int):\n",
     "        super(ShakespeareModel, self).__init__()\n",
     "        self.embedding = nn.Embedding(n_tokens, embedding_dim)\n",
     "        self.rnn = nn.GRU(embedding_dim, hidden_dim, batch_first=True)\n",
@@ -616,37 +626,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Train Model"
+    "## Define Text Genaration"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import time, math\n",
-    "\n",
-    "def time_since(since):\n",
-    "    s = time.time() - since\n",
-    "    m = math.floor(s / 60)\n",
-    "    s -= m * 60\n",
-    "    return '%dm %ds' % (m, s)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate_text(\n",
     "    tokenizer,\n",
     "    model,\n",
-    "    input_str,\n",
-    "    num_tokens=100,\n",
-    "    temperature=1.0,\n",
-    "):\n",
+    "    input_str: str,\n",
+    "    num_tokens: int = 100,\n",
+    "    temperature: float = 1.0,\n",
+    ") -> str:\n",
     "    model.eval()\n",
     "    tokenized_text = tokenizer(input_str).tokens()\n",
     "    input_tensor = (\n",
@@ -677,6 +672,26 @@
     "    output_ids = tokenizer.convert_tokens_to_ids(generated_text)\n",
     "    output_str = input_str + ' ' + tokenizer.decode(output_ids)\n",
     "    return output_str"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def time_since(since: float) -> str:\n",
+    "    s = time.time() - since\n",
+    "    m = math.floor(s / 60)\n",
+    "    s -= m * 60\n",
+    "    return '%dm %ds' % (m, s)"
    ]
   },
   {
