Function to tokenize text consistently

--- a/exercise-3-name/solution/text-generation.ipynb
+++ b/exercise-3-name/solution/text-generation.ipynb
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,38 +352,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5, Loss: 2.268483464938764\n",
-      "[0m 6s (0 0%) 1.8684]\n",
+      "Epoch 1/5, Loss: 2.271035790138732\n",
+      "[0m 6s (0 0%) 2.1613]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to beslo that tarres:\n",
-      "not! spaly and headerius:\n",
-      "hall nord to when and seneminenoutiesswingone the the to \n",
-      "Epoch 2/5, Loss: 1.9106965876996707\n",
-      "[0m 12s (1 20%) 1.9195]\n",
+      "to be or not to beses\n",
+      "hathgr mysher splin aruso ant, waver generie-:\n",
+      "male, anf you you indie, rour wayall your,\n",
+      "carene\n",
+      "Epoch 2/5, Loss: 1.9209989490600439\n",
+      "[0m 12s (1 20%) 1.8412]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to be's shalnteser, marf, that forther as in done ritutugup calack\n",
-      "gace ir wanger or tatgy wart of chpoce\n",
-      "Epoch 3/5, Loss: 1.8223891508845855\n",
-      "[0m 19s (2 40%) 1.6410]\n",
+      "to be or not to bety thatled as of it prowen hisous frught comenb the in the blous:\n",
+      "and thest raga sabluft mised seggt\n",
+      "Epoch 3/5, Loss: 1.8381634871418864\n",
+      "[0m 18s (2 40%) 1.7816]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to bereadak him a thelded to be a do nese-tor a on the swar hack?\n",
+      "to be or not to be from al propy trying\n",
+      "ws\n",
+      "youous, quarges,\n",
+      "my madnty's and on't a grings sire in bear mesest enomant?\n",
+      "Epoch 4/5, Loss: 1.7927972703696058\n",
+      "[0m 25s (3 60%) 1.8368]\n",
+      "------------------------------------------------------------------------\n",
+      "to be or not to bense, virster obence home.\n",
       "\n",
-      "marcius:\n",
-      "the daon, othed,\n",
-      "yy\n",
-      "parcius f\n",
-      "Epoch 4/5, Loss: 1.778055978811587\n",
-      "[0m 25s (3 60%) 1.6997]\n",
+      "menenius:\n",
+      "whint they showe fach, and of thesey prpeyeat comen i shalt the\n",
+      "Epoch 5/5, Loss: 1.7628117293214645\n",
+      "[0m 31s (4 80%) 1.7623]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to bead and they yous inss abund the notlicer are the gows\n",
-      "fuefn the commomverine\n",
-      "for'd, go belown; then \n",
-      "Epoch 5/5, Loss: 1.7515128799901603\n",
-      "[0m 32s (4 80%) 1.6035]\n",
-      "------------------------------------------------------------------------\n",
-      "to be or not to betg citizen:\n",
-      "whry not good the mey, rome, at thath for of sens not of to you groved\n",
-      "deat you wilosm c\n"
+      "to be or not to bed, bllobliedts am noblents lits manous; when mieb.\n",
+      "the dols, dishodiring.\n",
+      "as see truster to see hobs\n"
      ]
     }
    ],
@@ -426,10 +426,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "to be or not to be volp fiant,--'\n",
-      "when humsel, to bene. wor, as\n",
-      "of\n",
-      "yett begrich the ind be shall reecome ler that in y\n"
+      "to be or not to be ive hawino,\n",
+      "thasd stele a tike theme us meences.\n",
+      "\n",
+      "volomply to it frots throbes my torcher\n",
+      "and chath\n"
      ]
     }
    ],
@@ -493,22 +494,52 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Token indices sequence length is longer than the specified maximum sequence length for this model (13047 > 512). Running this sequence through the model will result in indexing errors\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "shakespeare_text = bert_uncased_tokenizer(raw_text).tokens()"
+    "def tokenize_text(\n",
+    "    tokenizer,\n",
+    "    text: str,\n",
+    ") -> list[str]:\n",
+    "    max_seq_length = tokenizer.model_max_length\n",
+    "    # Chunk the string so tokenizer can take in full input\n",
+    "    chunks_generator = (\n",
+    "        text[i:i+max_seq_length]\n",
+    "        for i in range(0, len(text), max_seq_length)\n",
+    "    )\n",
+    "    # Special tokens to ignore\n",
+    "    ignore_tokens = (\n",
+    "        tokenizer.cls_token,\n",
+    "    )\n",
+    "    # Get list of tokens (one chunk at a time)\n",
+    "    tokenized_text = [\n",
+    "        token\n",
+    "        for chunk in chunks_generator\n",
+    "        for token in tokenizer(chunk).tokens()\n",
+    "        if (\n",
+    "            token not in ignore_tokens\n",
+    "        )\n",
+    "    ]\n",
+    "\n",
+    "    return tokenized_text"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shakespeare_text = (\n",
+    "    tokenize_text(\n",
+    "        tokenizer=bert_uncased_tokenizer,\n",
+    "        text=raw_text,\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +674,7 @@
     "    temperature: float = 1.0,\n",
     ") -> str:\n",
     "    model.eval()\n",
-    "    tokenized_text = tokenizer(input_str).tokens()\n",
+    "    tokenized_text = tokenize_text(tokenizer=tokenizer, text=input_str)\n",
     "    input_tensor = (\n",
     "        torch.tensor(\n",
     "            [token2idx[token] for token in tokenized_text],\n",
@@ -683,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,33 +727,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5, Loss: 6.197644301489288\n",
-      "[0m 2s (0 0%) 5.7094]\n",
+      "Epoch 1/5, Loss: 6.166176602460336\n",
+      "[0m 2s (0 0%) 5.4258]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be he, how or whatdro la w where are but have home, no should mule you city spiritum never not is tis thy bands,ini marc\n",
-      "Epoch 2/5, Loss: 5.333558495138206\n",
-      "[0m 5s (1 20%) 4.8525]\n",
+      "To be or not to be risen this ofecteni between, was do who brook foremost'let may ll the le common with i o he to what have letter., off\n",
+      "Epoch 2/5, Loss: 5.406025084896364\n",
+      "[0m 5s (1 20%) 5.2818]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be maycu : and,rti wears give wounded they hot he, corio this to,er report? rats justice got so members him :ith statutes\n",
-      "Epoch 3/5, Loss: 4.787915608462165\n",
-      "[0m 8s (2 40%) 4.2919]\n",
+      "To be or not to be burn and tired shall these farewell ; ilina great, than, : no, i the be surf mal good art predecessors a sds by first!\n",
+      "Epoch 3/5, Loss: 4.871879844849812\n",
+      "[0m 8s (2 40%) 4.1865]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be us to be content - - when mothers dogs subjects there arecrest me, holding - letter and the as cannot he means mine. men's woo\n",
-      "Epoch 4/5, Loss: 4.409752887838027\n",
-      "[0m 10s (3 60%) 4.6681]\n",
+      "To be or not to be has the ice [SEP] they? all : away even to lip, we are? upon him corn clap look to there'we ne be officers.\n",
+      "Epoch 4/5, Loss: 4.4878922153786185\n",
+      "[0m 10s (3 60%) 4.3801]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be ##chers here't you is the noblestangled marcius a ex lately looks in news. ha tos to, the gods sheidius : which\n",
-      "Epoch 5/5, Loss: 4.10928665247618\n",
-      "[0m 13s (4 80%) 4.2452]\n",
+      "To be or not to be ours to this teous that or strength. com. valeria : come, which herd tolean men charged - re behind fast you are we shall\n",
+      "Epoch 5/5, Loss: 4.180407120409795\n",
+      "[0m 13s (4 80%) 3.6587]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be ##riolanus, when you with theirling dem ; i but'he didour,'fare is at hearingces to me. disease may heart\n"
+      "To be or not to be org me to the officers and him guard might sicinius : here report? all - in arms. those that with if me, i replied\n"
      ]
     }
    ],
@@ -757,14 +788,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "To be or not to be cupboard sous : and you find you havee to steel company, chests the dispatch is the blood is the gentle flower. else. volumnia\n"
+      "To be or not to be , and di at and poor! and ; sir, during the matter : t virgilia : i heard her would letter'instruments [SEP] times ; i\n"
      ]
     }
    ],
