Move Dataset class & some functions into helper.py

--- a/exercise-3-name/solution/text-generation.ipynb
+++ b/exercise-3-name/solution/text-generation.ipynb
@@ -9,18 +9,29 @@
     "from __future__ import annotations\n",
     "from collections.abc import Sequence\n",
     "\n",
-    "import time\n",
-    "import math\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "from collections import Counter\n",
-    "from torch.utils.data import Dataset, DataLoader"
+    "from torch.utils.data import DataLoader"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from helper import (\n",
+    "    ShakespeareDataset,\n",
+    "    start_time,\n",
+    "    time_since,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,39 +191,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "n_tokens = len(char2idx)\n",
     "dataset_size = len(encoded)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class ShakespeareDataset(Dataset):\n",
-    "    def __init__(self, encoded_text: Sequence, sequence_length: int):\n",
-    "        self.encoded_text = encoded_text\n",
-    "        self.sequence_length = sequence_length\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return len(self.encoded_text) - self.sequence_length\n",
-    "\n",
-    "    def __getitem__(self, index):\n",
-    "        x = torch.tensor(\n",
-    "            self.encoded_text[index: (index+self.sequence_length)],\n",
-    "            dtype=torch.long,\n",
-    "        )\n",
-    "        # Target is shifted by one character\n",
-    "        y = torch.tensor(\n",
-    "            self.encoded_text[(index+1): (index+self.sequence_length+1)],\n",
-    "            dtype=torch.long,\n",
-    "        )\n",
-    "        return x, y"
    ]
   },
   {
@@ -334,56 +318,58 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "def time_since(since: float) -> str:\n",
-    "    s = time.time() - since\n",
-    "    m = math.floor(s / 60)\n",
-    "    s -= m * 60\n",
-    "    return '%dm %ds' % (m, s)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5, Loss: 2.271035790138732\n",
-      "[0m 6s (0 0%) 2.1613]\n",
+      "Epoch 1/5, Loss: 2.2826013823286795\n",
+      "[00m 6.3s (0 0%) 1.9859]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to beses\n",
-      "hathgr mysher splin aruso ant, waver generie-:\n",
-      "male, anf you you indie, rour wayall your,\n",
-      "carene\n",
-      "Epoch 2/5, Loss: 1.9209989490600439\n",
-      "[0m 12s (1 20%) 1.8412]\n",
-      "------------------------------------------------------------------------\n",
-      "to be or not to bety thatled as of it prowen hisous frught comenb the in the blous:\n",
-      "and thest raga sabluft mised seggt\n",
-      "Epoch 3/5, Loss: 1.8381634871418864\n",
-      "[0m 18s (2 40%) 1.7816]\n",
-      "------------------------------------------------------------------------\n",
-      "to be or not to be from al propy trying\n",
-      "ws\n",
-      "youous, quarges,\n",
-      "my madnty's and on't a grings sire in bear mesest enomant?\n",
-      "Epoch 4/5, Loss: 1.7927972703696058\n",
-      "[0m 25s (3 60%) 1.8368]\n",
-      "------------------------------------------------------------------------\n",
-      "to be or not to bense, virster obence home.\n",
+      "to be or not to be:\n",
+      "and then lthaseren, thice.\n",
+      ".\n",
       "\n",
-      "menenius:\n",
-      "whint they showe fach, and of thesey prpeyeat comen i shalt the\n",
-      "Epoch 5/5, Loss: 1.7628117293214645\n",
-      "[0m 31s (4 80%) 1.7623]\n",
+      "fitga beand put.\n",
+      "\n",
+      "valinizibive he tor worts call word\n",
+      "homay romate e\n",
+      "Epoch 2/5, Loss: 1.908258936961238\n",
+      "[00m 12.6s (1 20%) 1.8876]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to bed, bllobliedts am noblents lits manous; when mieb.\n",
-      "the dols, dishodiring.\n",
-      "as see truster to see hobs\n"
+      "to be or not to bears of his gon him compinot mius.\n",
+      "\n",
+      "shim\n",
+      "in wento whis sean afalen wout?\n",
+      "\n",
+      "brutod,\n",
+      "my to hergs rnevera\n",
+      "Epoch 3/5, Loss: 1.8248796020452969\n",
+      "[00m 19.0s (2 40%) 1.9155]\n",
+      "------------------------------------------------------------------------\n",
+      "to be or not to be all the?\n",
+      "\n",
+      "aufirst not pecm; must bear gots!\n",
+      "\n",
+      "cimcinius:\n",
+      "sonke nor isue you,\n",
+      "we our valin wiels,\n",
+      "tha\n",
+      "Epoch 4/5, Loss: 1.7833617346736188\n",
+      "[00m 25.4s (3 60%) 2.0215]\n",
+      "------------------------------------------------------------------------\n",
+      "to be or not to bell.:\n",
+      "nod prove i a\n",
+      "me not yould vim.\n",
+      "\n",
+      "martius:\n",
+      "tell i,\n",
+      "the culp! tho store, indere sicinius:\n",
+      "weed i \n",
+      "Epoch 5/5, Loss: 1.7566966510047548\n",
+      "[00m 31.7s (4 80%) 1.6860]\n",
+      "------------------------------------------------------------------------\n",
+      "to be or not to besong but--your veroud; ank ded, to may. gran are flite then is licinianl, and fut. ingen should with\n"
      ]
     }
    ],
@@ -391,7 +377,7 @@
     "PHRASE = 'To be or not to be'\n",
     "epochs = 5\n",
     "\n",
-    "start = time.time()\n",
+    "start = start_time()\n",
     "for epoch in range(epochs):\n",
     "    model.train()\n",
     "    total_loss = 0\n",
@@ -419,18 +405,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "to be or not to be ive hawino,\n",
-      "thasd stele a tike theme us meences.\n",
-      "\n",
-      "volomply to it frots throbes my torcher\n",
-      "and chath\n"
+      "to be or not to bebers theg shall they fiblat had you areshere in that,\n",
+      "een peot cither fender:\n",
+      "then one the pratues! \n"
      ]
     }
    ],
@@ -448,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,6 +690,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenized_text = tokenize_text(tokenizer=bert_uncased_tokenizer, text='To be or not to')\n",
+    "input_tensor = (\n",
+    "    torch.tensor(\n",
+    "        [token2idx[token] for token in tokenized_text],\n",
+    "        dtype=torch.long,\n",
+    "    )\n",
+    "    .unsqueeze(0)\n",
+    "    )"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -716,51 +716,38 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "def time_since(since: float) -> str:\n",
-    "    s = time.time() - since\n",
-    "    m = math.floor(s / 60)\n",
-    "    s -= m * 60\n",
-    "    return '%dm %ds' % (m, s)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5, Loss: 6.166176602460336\n",
-      "[0m 2s (0 0%) 5.4258]\n",
+      "Epoch 1/5, Loss: 6.169780093114733\n",
+      "[00m 2.7s (0 0%) 4.9686]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be risen this ofecteni between, was do who brook foremost'let may ll the le common with i o he to what have letter., off\n",
-      "Epoch 2/5, Loss: 5.406025084896364\n",
-      "[0m 5s (1 20%) 5.2818]\n",
+      "To be or not to be ##us silenced co'word pray the good most,! plaguebed : meat for citizenutus greatest is : touching ir. think of, madam common to\n",
+      "Epoch 2/5, Loss: 5.345452580475001\n",
+      "[00m 5.4s (1 20%) 4.9929]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be burn and tired shall these farewell ; ilina great, than, : no, i the be surf mal good art predecessors a sds by first!\n",
-      "Epoch 3/5, Loss: 4.871879844849812\n",
-      "[0m 8s (2 40%) 4.1865]\n",
+      "To be or not to be stride a years : i advance super characterus, come crueldon andural malice for utmost, elders sent, that toter. when wheret shall\n",
+      "Epoch 3/5, Loss: 4.8034395468983675\n",
+      "[00m 8.1s (2 40%) 4.7401]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be has the ice [SEP] they? all : away even to lip, we are? upon him corn clap look to there'we ne be officers.\n",
-      "Epoch 4/5, Loss: 4.4878922153786185\n",
-      "[0m 10s (3 60%) 4.3801]\n",
+      "To be or not to be ##ia : briefly and allrice at time have thy infant : every shall that the people jupiter, heaven had hs, that note. virgilia to\n",
+      "Epoch 4/5, Loss: 4.420099650028247\n",
+      "[00m 10.9s (3 60%) 4.3923]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be ours to this teous that or strength. com. valeria : come, which herd tolean men charged - re behind fast you are we shall\n",
-      "Epoch 5/5, Loss: 4.180407120409795\n",
-      "[0m 13s (4 80%) 3.6587]\n",
+      "To be or not to be l a lamb. marcius : what : i shall beini with soldier, daughter folly. marcius. men, marcius : 'lor means\n",
+      "Epoch 5/5, Loss: 4.1186188165692315\n",
+      "[00m 13.7s (4 80%) 3.7286]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be org me to the officers and him guard might sicinius : here report? all - in arms. those that with if me, i replied\n"
+      "To be or not to be ##ucks a mother and yely the brainus : i warrant i will ing wanting, than thingss coriolanus marcius seen him not\n"
      ]
     }
    ],
    "source": [
     "epochs = 5\n",
     "\n",
-    "start = time.time()\n",
+    "start = start_time()\n",
     "for epoch in range(epochs):\n",
     "    model.train()\n",
     "    total_loss = 0\n",
@@ -788,14 +775,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "To be or not to be , and di at and poor! and ; sir, during the matter : t virgilia : i heard her would letter'instruments [SEP] times ; i\n"
+      "To be or not to be sworn with hisnts and their noble,, mutually know for ma good report thankful caius, we shall will in thirst. sicinius : therefore\n"
      ]
     }
    ],
