--- a/exercise-3-name/solution/text-generation.ipynb
+++ b/exercise-3-name/solution/text-generation.ipynb
@@ -26,6 +26,9 @@
     "    ShakespeareDataset,\n",
     "    start_time,\n",
     "    time_since,\n",
+    "    build_model,\n",
+    "    tokens_to_index_tensor,\n",
+    "    tokenize_text,\n",
     ")"
    ]
   },
@@ -229,30 +232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class ShakespeareModel(nn.Module):\n",
-    "    def __init__(self, n_tokens: int, embedding_dim: int, hidden_dim: int):\n",
-    "        super(ShakespeareModel, self).__init__()\n",
-    "        self.embedding = nn.Embedding(n_tokens, embedding_dim)\n",
-    "        self.rnn = nn.GRU(embedding_dim, hidden_dim, batch_first=True)\n",
-    "        self.fc = nn.Linear(hidden_dim, n_tokens)\n",
-    "        \n",
-    "    def forward(self, x):\n",
-    "        x = self.embedding(x)\n",
-    "        x, _ = self.rnn(x)\n",
-    "        x = self.fc(x)\n",
-    "        return x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "embed_dim = 16\n",
-    "hidden_dim = 32\n",
-    "\n",
-    "model = ShakespeareModel(n_tokens, embed_dim, hidden_dim)\n",
+    "model = build_model(n_tokens)\n",
     "model.to(device)\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.Adam(model.parameters())"
@@ -267,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,12 +259,9 @@
     ") -> str:\n",
     "    model.eval()\n",
     "    generated_text = input_str.lower()\n",
-    "    input_tensor = (\n",
-    "        torch.tensor(\n",
-    "            [char2idx[char] for char in input_str.lower()],\n",
-    "            dtype=torch.long,\n",
-    "        )\n",
-    "        .unsqueeze(0)\n",
+    "    input_tensor = tokens_to_index_tensor(\n",
+    "        tokens=input_str.lower(),\n",
+    "        token_index_mapping=char2idx,\n",
     "    )\n",
     "    \n",
     "    with torch.no_grad():\n",
@@ -316,60 +293,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5, Loss: 2.2826013823286795\n",
-      "[00m 6.3s (0 0%) 1.9859]\n",
+      "Epoch 1/5, Loss: 2.259148428843806\n",
+      "[00m 6.2s (0 0%) 1.7822]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to be:\n",
-      "and then lthaseren, thice.\n",
-      ".\n",
-      "\n",
-      "fitga beand put.\n",
-      "\n",
-      "valinizibive he tor worts call word\n",
-      "homay romate e\n",
-      "Epoch 2/5, Loss: 1.908258936961238\n",
-      "[00m 12.6s (1 20%) 1.8876]\n",
+      "to be or not to be hat, the lid this hace thay lot allde gofen to dethor hae our spingseled o' thaa: mose pome,\n",
+      "to vab\n",
+      "Epoch 2/5, Loss: 1.9099794088461148\n",
+      "[00m 12.5s (1 20%) 1.7914]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to bears of his gon him compinot mius.\n",
-      "\n",
-      "shim\n",
-      "in wento whis sean afalen wout?\n",
-      "\n",
-      "brutod,\n",
-      "my to hergs rnevera\n",
-      "Epoch 3/5, Loss: 1.8248796020452969\n",
-      "[00m 19.0s (2 40%) 1.9155]\n",
+      "to be or not to be it acounstis of vepory the the brutus:\n",
+      "you tho bliens on i gomst comefs ith and goon it the first y\n",
+      "Epoch 3/5, Loss: 1.8243300361755177\n",
+      "[00m 18.8s (2 40%) 1.6895]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to be all the?\n",
+      "to be or not to betor's dell.\n",
       "\n",
-      "aufirst not pecm; must bear gots!\n",
       "\n",
-      "cimcinius:\n",
-      "sonke nor isue you,\n",
-      "we our valin wiels,\n",
-      "tha\n",
-      "Epoch 4/5, Loss: 1.7833617346736188\n",
-      "[00m 25.4s (3 60%) 2.0215]\n",
+      "firs sodes mare fill you of nfen cantond.\n",
+      "\n",
+      "firsterioue i' tha onanius.\n",
+      "\n",
+      "auphfished on \n",
+      "Epoch 4/5, Loss: 1.7824568124624869\n",
+      "[00m 25.1s (3 60%) 1.6199]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to bell.:\n",
-      "nod prove i a\n",
-      "me not yould vim.\n",
-      "\n",
-      "martius:\n",
-      "tell i,\n",
-      "the culp! tho store, indere sicinius:\n",
-      "weed i \n",
-      "Epoch 5/5, Loss: 1.7566966510047548\n",
-      "[00m 31.7s (4 80%) 1.6860]\n",
+      "to be or not to beat varcidicition are belear found waus:\n",
+      "one make\n",
+      "yours: us, your neart dhaingring romcur his tit evo\n",
+      "Epoch 5/5, Loss: 1.7558585542459457\n",
+      "[00m 31.4s (4 80%) 1.7886]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to besong but--your veroud; ank ded, to may. gran are flite then is licinianl, and fut. ingen should with\n"
+      "to be or not to be thou mamcie: to. the condou worselist for all prutubleria: faces their sour.\n",
+      "\n",
+      "memands\n",
+      "comting,\n",
+      "ay h\n"
      ]
     }
    ],
@@ -405,16 +370,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "to be or not to bebers theg shall they fiblat had you areshere in that,\n",
-      "een peot cither fender:\n",
-      "then one the pratues! \n"
+      "to be or not to bellable the warpes\n",
+      "thoug. had say, haak, deedst more's to uspts not the him res thrigur a\n",
+      "woldonor ou\n"
      ]
     }
    ],
@@ -432,12 +397,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from torch.utils.data import Dataset, DataLoader\n",
-    "from transformers import AutoTokenizer, AutoConfig"
+    "from torch.utils.data import DataLoader\n",
+    "from transformers import AutoTokenizer"
    ]
   },
   {
@@ -460,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,40 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def tokenize_text(\n",
-    "    tokenizer,\n",
-    "    text: str,\n",
-    ") -> list[str]:\n",
-    "    max_seq_length = tokenizer.model_max_length\n",
-    "    # Chunk the string so tokenizer can take in full input\n",
-    "    chunks_generator = (\n",
-    "        text[i:i+max_seq_length]\n",
-    "        for i in range(0, len(text), max_seq_length)\n",
-    "    )\n",
-    "    # Special tokens to ignore\n",
-    "    ignore_tokens = (\n",
-    "        tokenizer.cls_token,\n",
-    "    )\n",
-    "    # Get list of tokens (one chunk at a time)\n",
-    "    tokenized_text = [\n",
-    "        token\n",
-    "        for chunk in chunks_generator\n",
-    "        for token in tokenizer(chunk).tokens()\n",
-    "        if (\n",
-    "            token not in ignore_tokens\n",
-    "        )\n",
-    "    ]\n",
-    "\n",
-    "    return tokenized_text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,34 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class ShakespeareDataset(Dataset):\n",
-    "    def __init__(self, encoded_text: Sequence, sequence_length: int):\n",
-    "        self.encoded_text = encoded_text\n",
-    "        self.sequence_length = sequence_length\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return len(self.encoded_text) - self.sequence_length\n",
-    "\n",
-    "    def __getitem__(self, index):\n",
-    "        x = torch.tensor(\n",
-    "            self.encoded_text[index: (index+self.sequence_length)],\n",
-    "            dtype=torch.long,\n",
-    "        )\n",
-    "        # Target is shifted by one token\n",
-    "        y = torch.tensor(\n",
-    "            self.encoded_text[(index+1): (index+self.sequence_length+1)],\n",
-    "            dtype=torch.long,\n",
-    "        )\n",
-    "        return x, y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,34 +509,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class ShakespeareModel(nn.Module):\n",
-    "    def __init__(self, n_tokens: int, embedding_dim: int, hidden_dim: int):\n",
-    "        super(ShakespeareModel, self).__init__()\n",
-    "        self.embedding = nn.Embedding(n_tokens, embedding_dim)\n",
-    "        self.rnn = nn.GRU(embedding_dim, hidden_dim, batch_first=True)\n",
-    "        self.fc = nn.Linear(hidden_dim, n_tokens)\n",
-    "        \n",
-    "    def forward(self, x):\n",
-    "        x = self.embedding(x)\n",
-    "        x, _ = self.rnn(x)\n",
-    "        x = self.fc(x)\n",
-    "        return x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "embed_dim = 16\n",
-    "hidden_dim = 32\n",
-    "\n",
-    "model = ShakespeareModel(n_tokens, embed_dim, hidden_dim)\n",
+    "model = build_model(n_tokens)\n",
     "model.to(device)\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.Adam(model.parameters())"
@@ -646,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,13 +541,11 @@
     ") -> str:\n",
     "    model.eval()\n",
     "    tokenized_text = tokenize_text(tokenizer=tokenizer, text=input_str)\n",
-    "    input_tensor = (\n",
-    "        torch.tensor(\n",
-    "            [token2idx[token] for token in tokenized_text],\n",
-    "            dtype=torch.long,\n",
-    "        )\n",
-    "        .unsqueeze(0)\n",
+    "    input_tensor = tokens_to_index_tensor(\n",
+    "        tokens=tokenized_text,\n",
+    "        token_index_mapping=token2idx,\n",
     "    )\n",
+    "\n",
     "    generated_text = []\n",
     "    with torch.no_grad():\n",
     "        for _ in range(num_tokens):\n",
@@ -690,22 +570,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tokenized_text = tokenize_text(tokenizer=bert_uncased_tokenizer, text='To be or not to')\n",
-    "input_tensor = (\n",
-    "    torch.tensor(\n",
-    "        [token2idx[token] for token in tokenized_text],\n",
-    "        dtype=torch.long,\n",
-    "    )\n",
-    "    .unsqueeze(0)\n",
-    "    )"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -714,33 +578,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5, Loss: 6.169780093114733\n",
-      "[00m 2.7s (0 0%) 4.9686]\n",
+      "Epoch 1/5, Loss: 6.209641674290532\n",
+      "[00m 2.7s (0 0%) 5.7561]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be ##us silenced co'word pray the good most,! plaguebed : meat for citizenutus greatest is : touching ir. think of, madam common to\n",
-      "Epoch 2/5, Loss: 5.345452580475001\n",
-      "[00m 5.4s (1 20%) 4.9929]\n",
+      "To be or not to be , pin first with it one - thato though mean itmen city : this't, dissent : than citizen [SEP] where pre but task and acc\n",
+      "Epoch 2/5, Loss: 5.377411510633386\n",
+      "[00m 5.6s (1 20%) 5.3217]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be stride a years : i advance super characterus, come crueldon andural malice for utmost, elders sent, that toter. when wheret shall\n",
-      "Epoch 3/5, Loss: 4.8034395468983675\n",
-      "[00m 8.1s (2 40%) 4.7401]\n",
+      "To be or not to be man : garland'gains : a enemy. la menuck, what praise the and trumpetsriolan door we at little lovedjo in who thirst do\n",
+      "Epoch 3/5, Loss: 4.812482122061909\n",
+      "[00m 8.4s (2 40%) 5.0367]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be ##ia : briefly and allrice at time have thy infant : every shall that the people jupiter, heaven had hs, that note. virgilia to\n",
-      "Epoch 4/5, Loss: 4.420099650028247\n",
-      "[00m 10.9s (3 60%) 4.3923]\n",
+      "To be or not to be t attend know he is! come,'d marcius : there, hoenius : large, and doubt for my plaster he [SEP] l friends\n",
+      "Epoch 4/5, Loss: 4.416869077705531\n",
+      "[00m 11.2s (3 60%) 4.4550]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be l a lamb. marcius : what : i shall beini with soldier, daughter folly. marcius. men, marcius : 'lor means\n",
-      "Epoch 5/5, Loss: 4.1186188165692315\n",
-      "[00m 13.7s (4 80%) 3.7286]\n",
+      "To be or not to be very as - - coriolanus : therefore : where you os. marcius, rome you. volrti think, i [SEP] ian hence,\n",
+      "Epoch 5/5, Loss: 4.099509870372533\n",
+      "[00m 14.2s (4 80%) 4.0907]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be ##ucks a mother and yely the brainus : i warrant i will ing wanting, than thingss coriolanus marcius seen him not\n"
+      "To be or not to be complexion off alikedue thin have be content you below foolish none you fool should it wasuitlier up and terrible matter, because ay, if well\n"
      ]
     }
    ],
@@ -775,14 +639,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "To be or not to be sworn with hisnts and their noble,, mutually know for ma good report thankful caius, we shall will in thirst. sicinius : therefore\n"
+      "To be or not to be brave fathers abundant ; that we shall you are since flower have on, we! bold stink at the world that pair hate, that'lamb double the\n"
      ]
     }
    ],
